src/pages/BodyStyles.css
.App-body {
  /*background-color: #282c34;*/
  /* background-color: #2292bf; */
  min-height: calc(100vh - 64px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10pt + 2vmin);
  /* color: white; */
  /* text-align: center; */
}
/* .navbar-shim {
  background-color: #2292bf;
  min-height: 64px;
} */

/*@media (max-width: 959px)and (orientation: landscape) {
  .App-header{
    min-height: calc(100vh - 48px);
  }
}*/

@media (max-width: 599px) {
  .App-body {
    min-height: calc(100vh - 56px);
  }
  /* .navbar-shim {
    min-height: 56px;
  } */
}

.App-link {
  color: #61dafb;
}

.body-content {
  padding: 2vmin 4.5vmin 0 4.5vmin;
}

.body-text {
  font-size: calc(8pt + 1vmin);
  text-align: left;
}

.caption {
  font-size: calc(4pt + 1vmin);
  /* color: white; */
}

.link {
  text-decoration: none;
  /* color: white; */
}

/* .linkWithUnderline {
  color: white;
} */
.captionLink {
  text-decoration: none;
  font-style: italic;
}
.screenshot {
  width: 100%;
}
.image-paper {
  padding: 10px;
}

